{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 83,
  "lineage": "ea247799-16d3-d45e-bbc6-60c18c2c012b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "natinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00999044593c895de",
            "arn": "arn:aws:ec2:ap-south-1:086696468835:instance/i-066568ffa655d98bd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066568ffa655d98bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ctkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09b7b5c23b3cc7a23",
            "private_dns": "ip-10-0-4-164.ap-south-1.compute.internal",
            "private_ip": "10.0.4.164",
            "public_ip": "13.233.237.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-092bf4ebea87e1d95",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0ad1a2c312185f55a",
            "tags": {
              "Name": "demonatinst"
            },
            "tags_all": {
              "Name": "demonatinst"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047bd3415c27594ef"
            ]
          },
          "dependencies": [
            "aws_security_group.natsggroup",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privateinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e0ca9924195beba",
            "arn": "arn:aws:ec2:ap-south-1:086696468835:instance/i-053dd4008a9c1ef5e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053dd4008a9c1ef5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ctkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025b2c837f903e42c",
            "private_dns": "ip-10-0-6-43.ap-south-1.compute.internal",
            "private_ip": "10.0.6.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efed7a32ccf73bff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e6cc2ff682f68c87",
            "tags": {
              "Name": "demopriinst"
            },
            "tags_all": {
              "Name": "demopriinst"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005374c375437861f"
            ]
          },
          "dependencies": [
            "aws_security_group.natsggroup",
            "aws_security_group.prisggroup",
            "aws_security_group.pubsggroup",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e0ca9924195beba",
            "arn": "arn:aws:ec2:ap-south-1:086696468835:instance/i-06ec8104518810668",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ec8104518810668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ctkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc60f55d22029ba5",
            "private_dns": "ip-10-0-4-55.ap-south-1.compute.internal",
            "private_ip": "10.0.4.55",
            "public_ip": "65.0.134.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a19e69f5408daf55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad1a2c312185f55a",
            "tags": {
              "Name": "demopubint"
            },
            "tags_all": {
              "Name": "demopubint"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0777ed7327ec7bb7d"
            ]
          },
          "dependencies": [
            "aws_instance.privateinstance",
            "aws_security_group.natsggroup",
            "aws_security_group.prisggroup",
            "aws_security_group.pubsggroup",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:internet-gateway/igw-095e2d291eef781a2",
            "id": "igw-095e2d291eef781a2",
            "owner_id": "086696468835",
            "tags": {
              "Name": "web-igw"
            },
            "tags_all": {
              "Name": "web-igw"
            },
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:route-table/rtb-089a97e444a3d191a",
            "id": "rtb-089a97e444a3d191a",
            "owner_id": "086696468835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095e2d291eef781a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-rt"
            },
            "tags_all": {
              "Name": "web-rt"
            },
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:route-table/rtb-0fc3b28aa4b349b63",
            "id": "rtb-0fc3b28aa4b349b63",
            "owner_id": "086696468835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-066568ffa655d98bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "net-rt"
            },
            "tags_all": {
              "Name": "net-rt"
            },
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.natinstance",
            "aws_security_group.natsggroup",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d51f029b545269c7",
            "route_table_id": "rtb-089a97e444a3d191a",
            "subnet_id": "subnet-0ad1a2c312185f55a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pubrt",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07686cf32fa1ae713",
            "route_table_id": "rtb-0fc3b28aa4b349b63",
            "subnet_id": "subnet-0e6cc2ff682f68c87"
          },
          "dependencies": [
            "aws_instance.natinstance",
            "aws_route_table.r1",
            "aws_security_group.natsggroup",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "natsggroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:security-group/sg-047bd3415c27594ef",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047bd3415c27594ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "TLS from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.6.0/24"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demonatsg1",
            "name_prefix": "",
            "owner_id": "086696468835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demonatsg1"
            },
            "tags_all": {
              "Name": "demonatsg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prisggroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:security-group/sg-005374c375437861f",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005374c375437861f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-047bd3415c27594ef"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0777ed7327ec7bb7d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "demoprisg1",
            "name_prefix": "",
            "owner_id": "086696468835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demoprisg1"
            },
            "tags_all": {
              "Name": "demoprisg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.natsggroup",
            "aws_security_group.pubsggroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pubsggroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:security-group/sg-0777ed7327ec7bb7d",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0777ed7327ec7bb7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "13.233.177.0/29"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-047bd3415c27594ef"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demopubsg1",
            "name_prefix": "",
            "owner_id": "086696468835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demopubsg1"
            },
            "tags_all": {
              "Name": "demopubsg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.natsggroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:subnet/subnet-0ad1a2c312185f55a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ad1a2c312185f55a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "086696468835",
            "tags": {
              "Name": "web-subnet-az-1"
            },
            "tags_all": {
              "Name": "web-subnet-az-1"
            },
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:subnet/subnet-0e6cc2ff682f68c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0e6cc2ff682f68c87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086696468835",
            "tags": {
              "Name": "app-subnet-az-1"
            },
            "tags_all": {
              "Name": "app-subnet-az-1"
            },
            "vpc_id": "vpc-0f5ea1eeea524677c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:086696468835:vpc/vpc-0f5ea1eeea524677c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0225bacd97ad01a69",
            "default_route_table_id": "rtb-0623adf3956a7f20e",
            "default_security_group_id": "sg-069dbc4cfb4338ff7",
            "dhcp_options_id": "dopt-42b41029",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f5ea1eeea524677c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0623adf3956a7f20e",
            "owner_id": "086696468835",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          }
        }
      ]
    }
  ]
}